SHiFT Code Panel elements no longer spill onto the border.

--- a/assets/styles/sass/local/shift.scss
+++ b/assets/styles/sass/local/shift.scss
@@ -575,6 +575,7 @@
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       padding: 0 8px 8px;
+      margin: 0 2px 2px;
       background-color: tpb(0.2);
       overflow: hidden;
 
